# S-OCT

./: .gitignore  README.md  pyproject.toml
CPAIOR2022/: datasets.py
s_oct/: decision_tree_heuristics.py  flow_oct.py  l1svm.py  oct.py  oct_comprehensive.py  soct.py
scripts/: consts.py  datasets.py  dl85_comprehensive.py  flow_oct_comprehensive.py  flow_oct_mip.py  oct_comprehensive.py  oct_mip.py  oct_reimplementation_comprehensive.py  octh_comprehensive.py  octh_reimplementation_comprehensive.py  parameter_tuning.py  soct_comprehensive.py  soct_mip.py
